--- a/archive.html
+++ b/archive.html
@@ -14,13 +14,13 @@
         <div class="d-flex align-center gap-sm">
             <img src="./assets/notes-sm.png">
             <h1 class="heading-1">
-                <a class="link" href="/">NoteIt</a>
+                <a class="link" href="./">NoteIt</a>
             </h1>
         </div>
         <nav class="nav d-flex align-center">
             <ul class="list-non-bullet">
                 <li class="list">
-                    <a href="/" class="link cursor">Home</a>
+                    <a href="./" class="link cursor">Home</a>
                 </li>
                 <li class="list"><a href="./archive.html" class="link cursor">Archive</a></li>
             </ul>
